Update JDA to 5.0.0-beta.6